# Jarvis2.0

./: .env.example  .gitignore  README.md  jarvis_vocal.py  pyproject.toml  start.bat  start_vocal.bat  start_vocal.sh
docs/: architecture.md  integrations.md  knowledge.md  operations.md  roadmap.md  vision.md  voice.md  workflows.md
src/jarvis_cyber/: __init__.py  auth.py  config.py  observability.py
src/jarvis_cyber/api/: main.py
src/jarvis_cyber/approvals/: store.py
src/jarvis_cyber/automations/: __init__.py  store.py
src/jarvis_cyber/core/: prompts.py  schemas.py
src/jarvis_cyber/inbox/: __init__.py  store.py
src/jarvis_cyber/integrations/: entra_id.py  github.py  google_drive.py  jira.py  microsoft_defender.py  microsoft_sentinel.py  nvd.py
src/jarvis_cyber/investigation_profiles/: store.py  templates.py
src/jarvis_cyber/investigations/: __init__.py  store.py
src/jarvis_cyber/knowledge/: __init__.py  embeddings.py  store.py  (+1 more)
tests/: test_api.py  test_approvals.py  test_assistant.py  test_automations.py  test_config.py  test_connector_digest.py  test_connectors.py  test_database.py  test_extractors.py  test_inbox.py  test_investigation_cases.py  test_investigation_enrichment.py  test_investigation_profiles.py  test_knowledge.py  test_memory.py  test_mfa.py  test_nvd.py  test_playbooks.py  test_profile.py  test_realtime.py  test_realtime_sideband.py  test_realtime_tools.py  test_scheduler.py  test_secret_vault.py  test_sentinel_query_templates.py  test_tool_catalog.py  test_tool_guardrails.py  test_voice.py  test_watchlists.py  test_workflows.py
(+32 files in other folders)
