[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "jarvis-cyber"
version = "0.1.0"
description = "A personal cybersecurity copilot designed to evolve into a voice-enabled agentic assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=46.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "openai>=1.0.0",
  "pypdf>=5.0.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.8.0",
  "python-multipart>=0.0.20",
  "tzdata>=2025.2",
  "uvicorn[standard]>=0.34.0",
  "websockets>=10.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]
voice = [
  "SpeechRecognition>=3.10.0",
  "pyttsx3>=2.90",
  "pyaudio>=0.2.14",
  "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_cyber"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
